changed z index for display issue on mobile - Khalina

--- a/alternativeRoutes.css
+++ b/alternativeRoutes.css
@@ -6,6 +6,7 @@
   position: relative;
   top: 10px;
   text-align: center;
+  z-index: -1;
 }
 .alternative-option{
   font-family: var(--secondary-headings-font);
